syntax = "proto2";

package fetch.oef.pb;

message Query {
    message Attribute {
        enum Type {
            DOUBLE  = 0;
            INT    = 1;
            BOOL   = 2;
            STRING = 3;
            LOCATION = 4;
        }
        optional string name = 1;
        optional Type type = 2;
        optional bool required = 3;
        optional string description = 4;
    }
    message DataModel {
        optional string name = 1;
        repeated Attribute attributes = 2;
        optional string description = 3;
    }
    message Location {
         optional double lon = 1;
         optional double lat = 2;
    }
    message Value {
        oneof value {
            string s = 1;
            double d = 2;
            bool b = 3;
            int64 i = 4;
            Location l = 5;
        }
    }
    message KeyValue {
        optional string key = 1;
        optional Value value = 2;
    }
    message Instance {
        optional DataModel model = 1;
        repeated KeyValue values = 2;
    }
    message StringPair {
        optional string first = 1;
        optional string second = 2;
    }
    message IntPair {
        optional int64 first = 1;
        optional int64 second = 2;
    }
    message DoublePair {
        optional double first = 1;
        optional double second = 2;
    }
    message LocationPair {
        optional Location first = 1;
        optional Location second = 2;
    }
    message Range {
        oneof pair {
            StringPair s = 1;
            IntPair i = 2;
            DoublePair d = 3;
            LocationPair l = 4;
        }
    }
    message Distance {
        optional Location center = 1;
        optional double distance = 2;
    }
    message Relation {
        enum Operator {
            EQ    = 0; // =
            LT    = 1; // <
            LTEQ  = 2; // <=
            GT    = 3; // >
            GTEQ  = 4; // >=
            NOTEQ = 5; // !=, <>
        }
        optional Operator op = 1;
        optional Value val = 2;
    }
    message Set {
        message Values {
            message Ints {
                repeated int64 vals = 1;
            }
            message Doubles {
                repeated double vals = 1;
            }
            message Strings {
                repeated string vals = 1;
            }
            message Bools {
                repeated bool vals = 1;
            }
            message Locations {
                repeated Location vals = 1;
            }
            oneof values {
                Strings s = 1;
                Doubles d = 2;
                Bools b = 3;
                Ints i = 4;
                Locations l = 5;
            }
        }
        enum Operator {
            IN    = 0;
            NOTIN = 1;
        }
        optional Operator op = 1;
        optional Values vals = 2;
    }
    message ConstraintExpr {
        message Or {
            repeated ConstraintExpr expr = 1;
        }
        message And {
            repeated ConstraintExpr expr = 1;
        }
        message Not {
            optional ConstraintExpr expr = 1;
        }
        message Constraint {
            optional string attribute_name = 1;
            oneof constraint {
                Set set_ = 2;
                Range range_ = 3;
                Relation relation = 4;
                Distance distance = 5;
            }
        }
        oneof expression {
            Or or_ = 1;
            And and_ = 2;
            Not not_ = 3;
            Constraint constraint = 4;
        }
    }
    message Model {
        repeated ConstraintExpr constraints = 1;
        optional DataModel model = 2;
    }
}

// option optimize_for = LITE_RUNTIME;
option optimize_for = SPEED;